<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/news"
            android:src="@mipmap/ic_launcher"
            android:foregroundGravity="fill_horizontal"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/news_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_authorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author_name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_datePablisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_publisher"
                android:textSize="12sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_pageViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/page_views"
                android:textAlignment="textEnd"
                android:textSize="12sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textAllCaps="false"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>